# pkg/types/store.go
@@ -16,7 +16,7 @@ type Store interface {
 	GetOrders(limit, offset int32, status, paymentStatus string) ([]models.Order, error)
 	CreateOrder(order models.Order) (models.Order, error)
 	GetOrderById(id uuid.UUID) (models.Order, error)
-	UpdateOrderStatus(order models.Order, id uuid.UUID) (models.Order, error)
+	UpdateOrderStatus(orderStatus models.OrderStatus) (models.Order, error)
 	PaymentWebhook(webhook models.Webhook) error
 	GetProducts(limit, offset, minQuantity int32) ([]models.Product, error)
 	AddProducts(products []models.Product) ([]models.Product, error)
